[package]
name = "pilot-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Disable Stack Unwinding when panic is triggered. Implement Custom Unwinding Later.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
